Workout Form - fixed conponent stretching over screen issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -134,6 +134,8 @@ input {
   position: fixed;
   top: 20%;
   right: 2%;
+  max-width: 25%;
+  min-width: 25%;
 }
 
 form button {
